pxc/tests/test_109_fixed/darr.px
public namespace darr;
import core::common -;

{
  const x = make_varray{int}(1, 2, 3);
  cslice{int} y = x;
  darray{int} z = y; // error
  println(z);
}
